# taso

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  justfile  rustfmt.toml
src/: command.rs  config.rs  context.rs  lib.rs  main.rs  model.rs  store.rs  ui.rs  util.rs
src/command/: add.rs  clean.rs  done.rs  init.rs  list_add.rs  list_default.rs  list_remove.rs  list_show.rs  modify.rs  move_.rs  remove.rs  track.rs  tree.rs
src/ui/: form.rs  tree.rs
src/ui/tree/: hack.rs  preset_evaluate.rs  preset_tree.rs  widget_node.rs  widget_tree.rs
