[package]
name = "taso"
version = "0.1.0"
authors = ["Horace Liu <>"]
edition = "2024"
description = "Simple command line todo-list for your life or your projects"
keywords = ["todolist", "cli", "file-based"]
categories = ["command-line-utilities"]
documentation = ""
repository = "https://git.sr.ht/~horin/taso"
license = "MIT"
rust-version = "1.87"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
clap_complete = "4.5.54"
env_logger = "0.11.8"
log = "0.4.27"
promkit = { version = "0.10.1", features = ["readline", "tree", "listbox"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.8.23"
